fix build warning messages